# Sara_medical_backend-main

./: .dockerignore  .env.example  .env.google-meet.example  .gitattributes  .gitignore  ADDITIONAL_FIXES.md  AI_integration.md  API_FLOWS_README.md  API_FLOW_DIAGRAMS.md  APPLE_AUTH_COMPLETE.md  APPLE_AUTH_ENV_EXAMPLE.md  APPLE_AUTH_FILE_GUIDE.md  APPLE_AUTH_FRONTEND.md  APPLE_AUTH_IMPLEMENTATION.md  APPLE_AUTH_QUICK_REF.md  APPLE_AUTH_SETUP.md  APPLE_AUTH_SUMMARY.md  APPLE_AUTH_VISUAL_SUMMARY.md  COMPLETE_TEST_RESULTS.md  CONTACT_FORM_API.md  CONTACT_FORM_DELIVERY.md  CONTACT_FORM_ENV_SETUP.md  CONTACT_FORM_FILES_LISTING.md  CONTACT_FORM_IMPLEMENTATION.md  CONTACT_FORM_QUICK_REFERENCE.md  CONTACT_FORM_README.md  CONTACT_FORM_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  E2E_TEST_RESULTS.md  FINAL_TEST_RESULTS.md  FIXES_APPLIED.md  FULL_SYSTEM_TEST_REPORT.md  GOOGLE_MEET_FIX.md  GOOGLE_MEET_FIX_APPLIED.md  GOOGLE_MEET_FIX_SUMMARY.md  GOOGLE_MEET_QUICK_START.md  GOOGLE_MEET_SETUP.md  GOOGLE_MEET_VISUAL_GUIDE.md  (+111 more)
alembic/: env.py
app/: __init__.py  config.py  database.py  delete_test.py  main.py  test_get_docs.py
docs/: CALENDAR_API_GUIDE.md  CALENDAR_TEST_REPORT.md
final_api_testing/: test_ai_integration.py  test_auth_api.py  test_calendar_api.py
flow/: api_data_flow.md  consultations_api_workflow.md  doctors_api_workflow.md  documents_api_workflow.md  permissions_api_workflow.md  test_consultations_api.py  test_doctors_api.py  test_documents_api.py  test_permissions_api.py
nginx/: default.conf  dev.conf
prompt/: testing_prompt.md
scripts/: check_pwd.py  ensure_db_schema.py  entrypoint.sh  fix_pwds.py  (+14 more)
(+284 files in other folders)
