[project]
name = "healthcare-ocr-backend"
version = "1.0.0"
description = "Production-grade CPU-optimized OCR & medical data extraction backend"
authors = [{name = "Liomonk Healthcare", email = "dev@liomonk.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # FastAPI and Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Background Processing
    "celery>=5.3.4",
    "redis>=5.0.1",
    
    # OCR and Image Processing
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.9.0.80",
    "Pillow>=10.2.0",
    "pdf2image>=1.16.3",
    "pdfplumber>=0.10.3",
    
    # FHIR Support
    "fhir.resources>=7.1.0",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
